Change product to palmSugar and Coffee

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -110,8 +110,8 @@
                     <span class="text-white bg-greenAgro rounded-md py-2 px-3">About</span> Our Company
                 </div>
                 <br>
-                <div class="text-lg font-poppins font-normal text-black lg:pt-16 lg:px-96 px-4 text-justify lg:text-center">PT Adaro Global Sinergi (Adaro Agro) is a company engaged in the export trade based in North Sumatera Indonesia which currently focuses on agricultural products. We believe that success in commodities trading comes through genuine long-term commitment to 
-                    all elements in the production and trading process.
+                <div class="text-lg font-poppins font-normal text-black lg:pt-16 lg:px-96 px-4 text-justify lg:text-center">PT Adaro Global Sinergi (Adaro Agro) is a company engaged in the export trade that currently focuses on agricultural products.
+                    We believe that success in commodities trading comes through genuine, long-term commitment to all elements in the production and trading process.
                 </div>
                 <div class="flex m-auto ab justify-center lg:mt-16 mt-8">
                     <a href="https://www.instagram.com/adaroagro/">
@@ -126,57 +126,69 @@
                 </div>
             </div>
 
-            <!--                                                        Why Chose Us                                                        -->
+            <!--                                                        Why Choose Us                                                        -->
 
             <div  class="w-full h-full text-center lg:mt-28 mt-10 ">
                 <!-- Judul About Us -->
-                <div class="w-full h-full lg:mt-36 mt-20 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Why Chose 
+                <div class="w-full h-full lg:mt-36 mt-20 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">Why Choose 
                     <span class="text-white bg-greenAgro rounded-md py-2 px-3">Us?</span>
                 </div>
 
                 <!-- Grid -->
-                <div class="grid lg:grid-cols-3 md:grid-cols-3 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-4 w-full m-auto lg:mt-20 mt-10 justify-center">
+                <div class="grid lg:grid-cols-6 md:grid-cols-6 grid-cols-1 grid-flow-row lg:grid-flow-row md:grid-flow-row gap-4 w-full m-auto lg:mt-20 mt-10 justify-center">
                     <!-- Integrity -->
-                    <div>
+                    <div class="col-span-2">
                         <img src="https://media.discordapp.net/attachments/938376555254652948/938376587752140830/Engineer.png" alt="Integrity" class="m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">INTEGRITY</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            Being honest and showing a consistent and uncompromising adherence to strong moral and ethical principles and values. Integrity is one of our most cherished assets. It must not be compromised
+                            Be honest and consistently committed to strong principles, ethics, and moral values in order to meet our clients' needs. Integrity is one of our most valuable assets. It can't be compromised. 
                         </div>
                     </div>
 
-                    <!-- Quality -->
-                    <div>
+                    <!-- SATISFACTION -->
+                    <div class="col-span-2">
                         <!-- Gambar -->
-                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376587588546580/Award.png" alt="" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376587588546580/Award.png" alt="SATISFACTION" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
-                        <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">QUALITY</h1>
+                        <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">SATISFACTION</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p >High quality means higher customer satisfaction and a greater chance of continued partnership. We always try to maintain our products standards</p>  
+                            <p>Customer satisfaction and loyalty are the main benchmarks for providing the best product and service continuously.</p>  
                         </div>
                     </div>
 
-                    <!-- Commitment -->
-                    <div>
+                    <!-- Respect -->
+                    <div class="col-span-2">
                         <!-- Gambar -->
-                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588989464646/Partnership.png" alt="Commitment" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/938376588989464646/Partnership.png" alt="Respect" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
-                        <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">COMMITMENT</h1>
+                        <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">RESPECT</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p class="">Making a commitment involves dedicating ourself to work with you. Commitment creates a bond of mutual trust. It creates an understanding and obligation between you and us</p>
+                            <p class="">Respect each other and always maintain good relationships with colleagues, clients, and partners.</p>
                         </div>
                     </div>
 
                     <div></div>
+
+                    <!-- Trustworthy -->
+                    <div class="col-span-2">
+                        <!-- Gambar -->
+                        <img src="https://media.discordapp.net/attachments/938376555254652948/960391441996185600/Trust.png" alt="Trustworthy" class=" m-auto rounded-xl hover:scale-125 duration-300">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">TRUSTWORTHY</h1>
+                        <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
+                            <p>Always maintain the trust given by customers by providing the best product quality assurance. </p>
+                        </div>
+                    </div>
+
                     <!-- INNOVATION -->
-                    <div>
+                    <div class="col-span-2">
                         <!-- Gambar -->
                         <img src="https://media.discordapp.net/attachments/938376555254652948/938376588125429761/Idea.png" alt="INNOVATION" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-poppins font-extrabold lg:text-2xl text-xl py-4">INNOVATION</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p >Innovation means the ability to create something better and launch it to the world. We Commited to always innovating in all fields for progress and success</p>
+                            <p>Innovation means the ability to create something better and apply it to a better world. We are committed to constantly innovating in order to advance and succeed.</p>
                         </div>
                     </div>
                 </div>
@@ -237,7 +249,7 @@
 
                     <!-- Amar -->
                     <div class="hover:scale-110 duration-300 mx-5 lg:mt-20">
-                        <img src="https://media.discordapp.net/attachments/938716010863808512/942669980191821844/IMG_1082222.jpg?width=384&height=682" alt="Muamar Hafizh" class="m-auto rounded-3xl w-72 duration-300">
+                        <img src="https://media.discordapp.net/attachments/938716010863808512/953183652181852170/IMG_1519.JPG?width=380&height=675" alt="Muamar Hafizh" class="m-auto rounded-3xl w-72 duration-300">
                         <h1 class="text-blackSeeDetails font-poppins font-semibold lg:text-2xl text-xl py-2">Muamar Hafizh</h1>
                         <div class="m-auto text-black font-poppins font-normal text-center lg:text-lg md:text-lg text-sm leading-8">
                             Chief Financial Officer
@@ -298,7 +310,7 @@
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                                         </div>
                                         <div class="justify-self-start">
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
