--- a/gallery.html
+++ b/gallery.html
@@ -85,66 +85,42 @@
             <!-- Judul Gallery -->
             <div class="w-full h-full lg:mt-36 mt-24 text-center text-greenAgro font-montserrat font-extrabold lg:text-6xl text-4xl">Gallery</div>
             <!-- Mulai masuk bagian image slider -->
-            <div class="swiper-wrapper lg:mt-16 mt-10 items-center">
-              <div class="swiper-slide hover:scale-110 duration-300">
-                  <!-- Betel Nut -->
-                <img src="https://media.discordapp.net/attachments/937942372497649664/937942925386600508/7.png?width=1027&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+            <div class="swiper-wrapper lg:mt-3 mt-10 items-center">
+              <div class="swiper-slide ">
+                <!-- Aren -->
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960468890083819520/IMG20220326114444.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937942372497649664/937942951605202974/8.png?width=1023&height=682" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960468890671001600/IMG20220326114501.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937942372497649664/937942977169461268/9.png?width=1026&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469006786101268/IMG20220326114540.jpg?width=4000&height=3000" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <!-- Black Pepper -->
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944002559373312/937944295753797632/25.png?width=1021&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <!-- Aren -->
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469007436222524/IMG20220326114558.jpg?width=4000&height=3000" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944002559373312/937944296307453992/26.png?width=1007&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469007973113866/IMG20220326114606.jpg?width=4000&height=3000" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://cdn.discordapp.com/attachments/937944002559373312/937944296840101928/27.png" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960468825537650718/IMG20220326113820.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <!-- Cassia -->
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944099670065212/937944406168850432/2.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <!-- Kopi -->
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469054362091580/IMG20220328163509.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944099670065212/937944406726684692/3.png?width=1022&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469083508342834/IMG20220328163552.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944099670065212/937944407192244264/4.png?width=1025&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469084099727360/IMG20220328163725.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <!-- Cloves -->
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944126480076841/937944509738786876/unknown.png?width=1032&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469056044007424/IMG20220328160430.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944126480076841/937944512876142663/unknown.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944126480076841/937944511244566599/unknown.png?width=945&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <!-- Nutmeg -->
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944161808711740/937944583965409320/unknown.png?width=1028&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944161808711740/937944584640663592/unknown.png?width=1027&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://cdn.discordapp.com/attachments/937944161808711740/937944586561654804/unknown.png" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <!-- White Cardamom -->
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944195673514024/937944618098634752/unknown.png?width=910&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944195673514024/937944618379661362/unknown.png?width=863&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
-              </div>
-              <div class="swiper-slide hover:scale-110 duration-300">
-                <img src="https://media.discordapp.net/attachments/937944195673514024/937944618715217981/unknown.png?width=943&height=683" class="lg:w-1/2 w-10/12 block m-auto rounded-xl">
+              <div class="swiper-slide ">
+                <img src="https://media.discordapp.net/attachments/959706637952778270/960469084833714186/IMG20220328182436.jpg?width=3000&height=4000" class="lg:w-96 w-10/12 block m-auto rounded-xl">
               </div>
               <!-- End Insert Image -->
             </div>
@@ -197,7 +173,7 @@
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                         </div>
                         <div class="justify-self-start">
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
