--- a/index.html
+++ b/index.html
@@ -100,23 +100,21 @@
                   <!-- Garis hijau dibawah ADARO AGRO -->
                   <div class="inset-0 lg:h-1 h-0.5 rounded lg:w-16 md:w-8 w-4 bg-greenContactUs"></div>
               </div>
-              <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-medium lg:px-12 md:px-6 px-2 "> <em>"We bring local farmer <br> products to the world"</em></p>
+              <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-medium lg:px-12 md:px-6 px-2 "> <em>"We bring Indonesian <br> products to the world"</em></p>
             </div>
             <div class="swiper-wrapper mt-16 lg:mt-20 z-40">
               <!-- Slides 1 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/1-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753471009726474/1.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 2 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/2-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960756205880475678/Group_64.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 3 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/3-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753507252727838/3.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 4 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/4-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753517008674856/4.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 5 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/5-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753912992907334/5.png?width=1920&height=1080" alt=""></div>
               <!-- Slide 6 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/6-min.png" alt=""></div>
-              <!-- Slide 7 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/7-min.png" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="https://media.discordapp.net/attachments/960562156938616832/960753925714247750/6.png?width=1920&height=1080" alt=""></div>
 
             </div>
             <!-- If we need pagination -->
@@ -157,19 +155,17 @@
                 <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-x-4 w-full mt-10">
+                <div class="w-full grid lg:grid-rows-1 md:grid-rows-1 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col mt-10 lg:mt-24">
 
-                    <!-- Betel Nut -->
-                    <!-- Gambar Product -->
-                    <div>
-                        <img src="https://media.discordapp.net/attachments/937942372497649664/945187822086815784/6.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
-                    <!-- Deskripsi Product -->
-                    <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Betel Nut</h1>
+                    <!-- Palm Sugar -->
+                    <div class="lg:ml-36 hover:scale-125 duration-300">
+                        <!-- Gambar Product -->
+                        <img src="https://media.discordapp.net/attachments/955815606274367518/960560561412771850/1.jpg?width=1080&height=1080" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Organic Palm <br> Sugar</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
-                            <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Arenga palm sugar is similar to coconut palm sugar. Both sugars are extracted <span class="text-gray-300 md:text-blackText lg:text-blackText">from </span> <span class="text-gray-300 md:text-blackText lg:text-gray-300">arenga palm <span class="lg:text-gray-300 md:text-gray-300 ">tree and...</span></span></p>
+                            <a href="/palmsSugar.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
                                 </svg>
@@ -177,13 +173,47 @@
                         </div>
                     </div>
 
+                    <!-- Coffee Powder -->
+                    <div class="hover:scale-125 duration-300">
+                        <!-- Gambar Product -->
+                        <img src="https://media.discordapp.net/attachments/959680381894950932/959680415604568084/powder1.jpg?width=676&height=676" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Roasted Ground<br> Coffee</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Ground coffee is coffee beans that have been ground to a certain size on <span class="text-blackText lg:text-gray-300">request.</span> <span class="text-gray-300"> After the coffee...</span></p>
+                            <a href="/coffeePowder.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Coffee Roasting -->
+                    <div class="lg:mr-36 hover:scale-125 duration-300">
+                        <!-- Gambar Product -->
+                        <img src="https://media.discordapp.net/attachments/958961868863598612/959656683636944956/Kopi1.jpg?width=676&height=676" alt="" class="h-72 m-auto rounded-xl px-3 lg:px-0">
+                        <!-- Deskripsi Product -->
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 ">Roasted Coffee <br> Beans</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Roasting causes chemical changes to occur because the coffee beans are <span class="text-gray-300 lg:text-blackText">quickly </span> <span class="text-gray-300">brought to a very high... </span></p>
+                            <a href="/coffee.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- ------------------------------------------Product belum dipake--------------------------------------------------- -->
+
                     <!-- Cloves -->
                     <!-- Gambar Product -->
-                    <div class="mt-10">
+                    <!-- <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944126480076841/945187956333883483/3.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
+                    </div> -->
                     <!-- Deskripsi Product -->
-                    <div>
+                    <!-- <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Cloves</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Cloves are the aromatic dried flower buds of a tree. They are native to the <span class="text-gray-300">Maluku islands in Indonesia... </span></p>
@@ -193,15 +223,15 @@
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Cinnamon Sticks -->
                     <!-- Gambar Product -->
-                    <div>
+                    <!-- <div>
                         <img src="https://media.discordapp.net/attachments/937944099670065212/945187917511421962/4.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
+                    </div> -->
                     <!-- Deskripsi Product -->
-                    <div>
+                    <!-- <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Cinnamon Sticks</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia <span class="text-gray-300">bark (both powdered and...</span></p>
@@ -211,15 +241,15 @@
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Nutmeg -->
                     <!-- Gambar Product -->
-                    <div class="mt-10">
+                    <!-- <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944161808711740/945188212454858802/2.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
+                    </div> -->
                     <!-- Deskripsi Product -->
-                    <div>
+                    <!-- <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Nutmeg</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Nutmeg is a spice made from the seed of the nutmeg tree, a native Indonesian <span class="text-gray-300">evergreen tree that is the...</span></p>
@@ -229,15 +259,33 @@
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
+
+                    <!-- Betel Nut -->
+                    <!-- Gambar Product -->
+                    <!-- <div>
+                        <img src="https://media.discordapp.net/attachments/937942372497649664/945187822086815784/6.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
+                    </div> -->
+                    <!-- Deskripsi Product -->
+                    <!-- <div>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Betel Nut</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
+                            <a href="/betelNut.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:scale-105 duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div> -->
 
                     <!-- White Cardamom -->
                     <!-- Gambar Product -->
-                    <div>
+                    <!-- <div>
                         <img src="https://media.discordapp.net/attachments/937944195673514024/945188136668004424/1.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
+                    </div> -->
                     <!-- Deskripsi Product -->
-                    <div>
+                    <!-- <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">White Cardamom</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
@@ -247,15 +295,15 @@
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Black Pepper -->
                     <!-- Gambar Product -->
-                    <div class="mt-10">
+                    <!-- <div class="mt-10">
                         <img src="https://media.discordapp.net/attachments/937944002559373312/945187884992962700/5.png?width=947&height=683" alt="" class="w-72 m-auto rounded-xl scale-105 hover:scale-125 duration-300">
-                    </div>
+                    </div> -->
                     <!-- Deskripsi Product -->
-                    <div>
+                    <!-- <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl pb-4 -mt-4">Black Pepper</h1>
                         <div class="w-72 m-auto bg-white">
                             <p class="text-blackText font-poppins  text-justify lg:text-xl md:text-base text-sm lg:leading-relaxed">This spice alone accounts for 35% of the world trade in spices. It is no surprise <span class="text-gray-300 lg:text-blackText md:text-blackText ">then </span><span class="text-gray-300 ">that black pepper is known...</span></span></p>
@@ -265,11 +313,14 @@
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
+
+                    <!-- End Product -->
+                    <!-- ------------------------------------------Product belum dipake--------------------------------------------------- -->
                 </div>
 
                 <!-- Btn Collaborate -->
-                <div class="w-full absolute lg:mt-20 mt-10 ">
+                <div class="w-full absolute lg:mt-40 mt-10 ">
                     <div>
                         <a  href="https://api.whatsapp.com/send?phone=6285171516102" style="background-image: url(./assets/img/collaborate.png);" 
                             class="bg-greenAgro hover:bg-greenOurProduct text-white w-auto m-auto font-montserrat font-semibold lg:p-8 p-3 rounded-2xl lg:text-4xl md:text-2xl text-md bg-no-repeat bg-left hover:bg-opacity-80 duration-300">
@@ -325,7 +376,7 @@
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                                         </div>
                                         <div class="justify-self-start">
                                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
