--- a/termsAndCondition.html
+++ b/termsAndCondition.html
@@ -94,7 +94,7 @@
                         <h1 class="text-blackSeeDetails font-montserrat font-bold lg:text-3xl text-xl py-4">Payment</h1>
                         <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-left text-justify lg:text-lg md:text-lg text-sm leading-8">
                             <ul>
-                                <li>• Irrevocable Letter of Credit (L/C) payment</li>
+                                <li>• Irrevocable Letter of Credit (L/C) at sight payment</li>
                                 <li>• Telegraphic / Swift Wire Transfer (T/T)</li>
                             </ul>
                             <br>
@@ -108,8 +108,8 @@
                         <img src="https://media.discordapp.net/attachments/938377104918204527/938377117895368734/Confirmation_Order.png" alt="" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-montserrat font-bold lg:text-3xl text-xl py-4">Order Terms</h1>
-                        <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-center text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p >Minimum order is 18 Metric Tons or 1 x 20ft FCL</p>  
+                        <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-justify text-justify lg:text-lg md:text-lg text-sm leading-8">
+                            <p >Customers who want to order must meet the Minimum Order Quantity (MOQ). Each commodity that we provide has a different Minimum Order Quantity (MOQ).</p>  
                         </div>
                     </div>
 
@@ -119,8 +119,8 @@
                         <img src="https://media.discordapp.net/attachments/938377104918204527/938377117664706590/Sample_Test.png" alt="" class=" m-auto rounded-xl hover:scale-125 duration-300">
                         <!-- Deskripsi Product -->
                         <h1 class="text-blackSeeDetails font-montserrat font-bold lg:text-3xl text-xl py-4">Sample Order</h1>
-                        <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-left text-justify lg:text-lg md:text-lg text-sm leading-8">
-                            <p class="">We give 1 kilograms of free sample with shipping cost and taxes paid by the buyer</p>
+                        <div class="m-auto lg:w-8/12 w-9/12 bg-white text-blackText font-poppins font-normal lg:text-justify text-justify lg:text-lg md:text-lg text-sm leading-8">
+                            <p class="">We provide a certain quantity of free samples as sample products so that clients have an idea of our products. Sample requests that exceed the maximum quantity we provide for free will be charged the normal production price.</p>
                         </div>
                     </div>
 
@@ -180,7 +180,7 @@
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                         </div>
                         <div class="justify-self-start">
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
