--- a/whiteCardamom.html
+++ b/whiteCardamom.html
@@ -237,7 +237,7 @@
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                         </div>
                         <div class="justify-self-start">
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
