--- a/blackPepper.html
+++ b/blackPepper.html
@@ -86,13 +86,13 @@
             <!-- Judul Gallery -->
             <div class="w-full h-full lg:mt-36 mt-28 text-center text-greenAgro font-montserrat font-extrabold lg:text-5xl text-3xl">OUR PRODUCTS</div>
 
-            <div class="lg:w-1/2 md:w-1/2 w-full px-2 lg:px-0 lg:mt-10 mt-6 m-auto grid lg:grid-cols-3 grid-cols-2 gap-5 text-center font-montserrat font-extrabold text-white lg:text-2xl text-sm">
+            <div class="lg:w-1/2 w-full px-2 lg:px-0 lg:mt-10 mt-6 m-auto grid lg:grid-cols-3 grid-cols-2 gap-5 text-center font-montserrat font-extrabold text-white lg:text-2xl text-sm">
+                <a href="/palmsSugar.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Palm Sugar</a>
                 <a href="/nutmeg.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Nutmeg</a>
                 <a href="/betelNut.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Betel Nut</a>
-                <a href="/cloves.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Cloves</a>
                 <a href="/cinnamonStick.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Cinnamon Stick</a>
                 <a href="/blackPepper.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Black Pepper</a>
-                <a href="/whiteCardamom.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">White Cardamom</a>
+                <a href="/cloves.html" class="bg-greenAgro p-2 rounded-lg hover:scale-110 duration-300">Cloves</a>
             </div>
 
             
@@ -243,7 +243,7 @@
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375722127482910/unknown.png" alt="Location" class="w-7 m-auto">
                         </div>
                         <div class="font-poppins font-normal text-sm text-left col-span-4">
-                            Jl. Patriot Komplek Rencong Mas No. 33 <br>Kecamatan Medan Sunggal, Kota Medan <br>Provinsi Sumatera Utara, Indonesia. <br>20128
+                            Jl. Patriot Rencong Mas Housing Complex No. 33, Lalang, Medan Sunggal, Medan, North Sumatra 20127, Indonesia
                         </div>
                         <div class="justify-self-start">
                             <img src="https://media.discordapp.net/attachments/938374277751795743/938375720827244594/unknown.png" alt="Whatsapp" class="w-8 m-auto">
